--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,181 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webpack 4</title>
+    <title>Fresh Eats</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <style>
+      .navbar {
+      background-color: #FFE8E1;
+      margin-bottom: 50px;
+      border-radius: 0;
+    }
+     
+     .jumbotron {
+      margin-bottom: 0;
+      background-image: url("./assets/media/calum-lewis-391372-unsplash.jpg");
+      background-size: cover;
+    }
+   
+    footer {
+      background-color: #B0D785;
+      padding: 25px;
+    }
+
+    p {
+    font-family: 'Noto+Sans';
+    font-size: 16px;
+    font-style: italic;
+    color: #ffffff;
+    }
+
+  .button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #ffe8e1;
+  border: none;
+  color: #000000;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+   .button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.6s;
+}
+
+   .button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.6s;
+}
+
+   .button:hover span {
+  padding-right: 25px;
+}
+
+   .button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+    </style>
 </head>
 <body>
-        <h1>Your Webpack installation is working</h1>
-        <img src="./assets/media/bear.jpg" alt="bear">
-        <img src="./assets/media/kiwi.svg" alt="kiwi">
-        <audio controls>
-            <source src="./assets/media/horse.ogg" type="audio/ogg">
-          Your browser does not support the audio element.
-          </audio>
-    
-</body>
+    <div class="jumbotron">
+     <div class="container text-left">
+      <img src="./assets/media/fresh-eats-logo.png" class="img-responsive"></a>      
+     <p>Affordable and Modern Meals</p>
+   </div>
+ </div>
+    <nav class="navbar navbar-inverse">
+     <div class="container-fluid">
+      <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>      
+       </button>
+     <a class="navbar-brand" href="#">Welcome</a>
+     </div>
+     <div class="collapse navbar-collapse" id="myNavbar">
+       <ul class="nav navbar-nav">
+         <li class="active"><a href="#">Home</a></li>
+         <li><a href="#how">How It Works</a></li>
+         <li><a href="#">Choose a Plan</a></li>
+         <li><a href="#">View Our Menu</a></li>
+         <li><a href="#">Login/SignUp</a></li>
+       </ul>
+      <ul class="nav navbar-nav navbar-right">
+         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
+         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+       </ul>
+     </div>
+   </div>
+ </nav>
+     <p>Mission Lorum and stuff, eat healthy, do stuff and more lorum stuff...</p>
+     <div class="col-sm-4"> 
+       <div class="panel panel-success">
+         <div class="panel-heading">Breakfast</div>
+         <div class="panel-body"><img src="./assets/media/brooke-lark-289769-unsplash.jpg")
+          class="img-responsive" style="width:100%" alt="food and coffee"></div>
+         <div class="panel-footer">Are you Hungry?</div>
+       </div>
+     </div>
+   </div>
+ </div><br>
+ <div class="col-sm-4"> 
+       <div class="panel panel-danger">
+         <div class="panel-heading">Brunch</div>
+         <div class="panel-body"><img src="./assets/media/brooke-lark-229136-unsplash.jpg" class="img-responsive" style="width:100%" alt="Salad"></div>
+         <div class="panel-footer">Enjoy your Food</div>
+       </div>
+     </div>
+    </div>
+   </div><br>
+     <div class="col-sm-4"> 
+       <div class="panel panel-success">
+         <div class="panel-heading">Lunch</div>
+         <div class="panel-body"><img src="./assets/media/brooke-lark-194252-unsplash.jpg"
+ class="img-responsive" style="width:100%" alt="Salad"></div>
+         <div class="panel-footer">Just Order</div>
+       </div>
+     </div>
+   </div>
+ </div><br>
+ <div class="col-sm-4"> 
+       <div class="panel panel-danger">
+         <div class="panel-heading">Supper</div>
+         <div class="panel-body"><img src="./assets/media/brooke-lark-176364-unsplash.jpg" class="img-responsive" style="width:100%" alt="pasta and wine"></div>
+         <div class="panel-footer">Choose your Meals</div>
+       </div>
+     </div>
+    </div>
+   </div><br>
+     <div class="col-sm-4"> 
+       <div class="panel panel-success">
+         <div class="panel-heading">Dinner</div>
+         <div class="panel-body"><img src="./assets/media/sharon-chen-352895-unsplash.jpg" class="img-responsive" style="width:100%" alt="Dinner"></div>
+         <div class="panel-footer">Get your Goodies</div>
+       </div>
+     </div>
+   </div>
+ </div><br>
+     <div class="col-sm-4"> 
+       <div class="panel panel-danger">
+         <div class="panel-heading">Only Fresh</div>
+         <div class="panel-body"><img src="./assets/media/joanie-simon-353427-unsplash.jpg" class="img-responsive" style="width:100%" alt="Fresh foods"></div>
+         <div class="panel-footer">Create Magic</div>
+       </div>
+     </div>
+    </div>
+ </div><br>
+ <footer class="container-fluid text-center">
+   <p class="how">How It Works</p>  
+   <form class="form-inline">Get deals:
+     <input type="email" class="form-control" size="50" placeholder="Email Address">
+     <button class="button" style="vertical-align:middle"><span>Sign up </span></button>
+     <div>
+     <i class="fab fa-github-square"></i>
+     <i class="fab fa-linkedin"></i>
+     <i class="far fa-copyright"></i>
+    </div>
+     <p>copywrite</p>
+   </form>
+ </footer>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+ </body>
 </html>
